PROJECT(hb_node_api C)

ADD_FILTER(
src
	hb_node_api.h
	hb_node_api.c
)

IF(WIN32)
    ADD_EXECUTABLE(${PROJECT_NAME} WIN32 ${HUMMINGBIRD_SOURCE_FILES})
ELSEIF(UNIX AND NOT ANDROID)
    ADD_EXECUTABLE(${PROJECT_NAME} ${HUMMINGBIRD_SOURCE_FILES})
ENDIF()


TARGET_LINK_LIBRARIES(${PROJECT_NAME} hb_node_main)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} hb_script)
