PROJECT(hb_node_loginaccount C)

ADD_FILTER(
src
	hb_node_loginaccount.h
	hb_node_loginaccount.c
)

IF(WIN32)
    ADD_EXECUTABLE(${PROJECT_NAME} WIN32 ${HUMMINGBIRD_SOURCE_FILES})
ELSEIF(UNIX AND NOT ANDROID)
    ADD_EXECUTABLE(${PROJECT_NAME} ${HUMMINGBIRD_SOURCE_FILES})
ENDIF()

TARGET_LINK_LIBRARIES(${PROJECT_NAME} hb_node_main)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} hb_token)

