PROJECT(hb_node_main C)

ADD_FILTER(
src
	hb_node_main.h
	hb_node_main.c
)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${HUMMINGBIRD_SOURCE_FILES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} hb_config)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} hb_utils)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} hb_log)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} hb_log_file)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} hb_log_tcp)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} hb_sharedmemory)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} hb_node)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} hb_db)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} hb_cache)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} hb_storage)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} hb_json)
