PROJECT(hb_node_newproject C)

ADD_FILTER(
src
	hb_node_newproject.h
	hb_node_newproject.c
)

ADD_EXECUTABLE(${PROJECT_NAME} WIN32 ${HUMMINGBIRD_SOURCE_FILES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} hb_config)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} hb_utils)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} hb_log)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} hb_db)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} hb_storage)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} hb_sharedmemory)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} hb_json)
