PROJECT(hb_script C)

ADD_FILTER(
src
	hb_script.h
	hb_script.c
    hb_script_compiler.h
    hb_script_compiler.c
    
    hb_script_handle.h
    
    hb_script_server_GetCurrentUserData.c
)

INCLUDE_DIRECTORIES(${HUMMINGBIRD_DEPENDENCIES_SOURCE_DIRECTORY}/lua)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${HUMMINGBIRD_SOURCE_FILES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${HUMMINGBIRD_DEPENDENCIES_LIBRARY_DIRECTORY}/${CMAKE_LIB_PREFIX}lua${CMAKE_STATIC_LIBRARY_SUFFIX})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} hb_log)