PROJECT(hb_sharedmemory C)

IF(WIN32)
    SET(PLATFORM_SOURCES hb_sharedmemory_win32.c)
ELSEIF(UNIX)
    SET(PLATFORM_SOURCES hb_sharedmemory_unix.c)
ENDIF()

ADD_FILTER(
src
	hb_sharedmemory.h
    ${PLATFORM_SOURCES}
)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${HUMMINGBIRD_SOURCE_FILES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} hb_config)