PROJECT(hb_storage C)

ADD_FILTER(
src
	hb_storage.h
	hb_storage.c
)

INCLUDE_DIRECTORIES(${HUMMINGBIRD_DEPENDENCIES_SOURCE_DIRECTORY}/lz4)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${HUMMINGBIRD_SOURCE_FILES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${HUMMINGBIRD_DEPENDENCIES_LIBRARY_DIRECTORY}/${CMAKE_LIB_PREFIX}lz4${CMAKE_STATIC_LIBRARY_SUFFIX})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} hb_cache)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} hb_archive)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} hb_utils)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} hb_log)


