PROJECT(hb_storage C)

HUMMINGBIRD_ADD_FILTER(
src
    hb_storage.h
    hb_storage.c
)

INCLUDE_DIRECTORIES(${HUMMINGBIRD_LZ4_INCLUDES})

HUMMINGBIRD_ADD_LIBRARY()

TARGET_LINK_LIBRARIES(${PROJECT_NAME} hb_cache)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} hb_archive)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} hb_utils)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} hb_log)


